--- a/FAQ.html
+++ b/FAQ.html
@@ -100,7 +100,6 @@
 </div>
 	
 	
-	
 	<button type="button" class="collapsible">Why use the Easy Apply Bot?</button>
 <div class="content">
 <p align="justify">	
@@ -121,7 +120,53 @@ The Easy Apply Apply Bot is designed to get around all this, and make finding a 
 </div>
 	
 	
-	
+<button type="button" class="collapsible">What are the system requirements needed to run the Easy Apply Bot?</button>
+<div class="content">
+The Easy Apply Bot is designed to run on almost any computer, including those "not-so-up-to-date" ones, so long as the are capable of running Chrome or Firefox.
+		<h2>Compatibility</h2>
+	<br>
+	<br>
+	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
+	<table class="browserref">
+  	<tbody><tr>
+  	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
+   	  <th style="width:16%;" height="25" class="null" title="Mac"></th>
+  	  <th style="width:16%;" height="25" class="null" title="Windows PC"></th>
+	  <th style="width:16%;" height="25" class="null" title="Linux"></th>
+             
+  	</tr>
+  	<tr>
+	  <td style="text-align:left;">Supported</td>
+    	  <td style="text-align:center;">Yes</td>
+    	  <td style="text-align:center;">Yes</td>
+    	  <td style="text-align:center;">Yes</td>
+
+ 	 </tr>
+	</tbody></table>
+	<h2>Compatibility</h2>
+	<br>
+	<br>
+	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
+	<table class="browserref">
+  	<tbody><tr>
+  	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
+   	  <th style="width:16%;" height="25" class="bsChrome" title="Chrome"></th>
+  	  <th style="width:16%;" height="25" class="bsEdge" title="Internet Explorer / Edge"></th>
+	  <th style="width:16%;" height="25" class="bsFirefox" title="Firefox"></th>
+    	  <th style="width:16%;" height="25" class="bsSafari" title="Safari"></th>
+          <th style="width:16%;" height="25" class="bsOpera" title="Opera"></th>                
+  	</tr>
+  	<tr>
+	  <td style="text-align:left;">Supported</td>
+    	  <td style="text-align:center;">Yes</td>
+    	  <td style="text-align:center;">Soon</td>
+    	  <td style="text-align:center;">Soon</td>
+  	  <td style="text-align:center;">Soon</td>
+  	  <td style="text-align:center;">Yes*</td>
+ 	 </tr>
+	</tbody></table>
+
+</div>
 	
 	
 
