--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 <div class="topnav">
-  <a href="#">Download Easy Apply Bot Now!</a>
+  <a href="/LinkedInClickerPage/">Home</a>
   <a href="/LinkedInClickerPage/Resume_Tips_Tricks.html">Resume Tips & Tricks</a>
   <a href="/LinkedInClickerPage/FAQ.html">FAQ</a>
 </div class="topnav">
