--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 	<div class="flex-container">
   	  <div class="flex-item">
 	    <a href="/app/signup" class="button">
-	      Try for free
-	    </a>
+	      Get a Job, Guarenteed
+		    <a>
   	  </div> 
        </div>  
 	
