--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	
 	<div class="flex-container">
   	  <div class="flex-item">
-	    <a href="/app/signup" class="button">Get a Job, Guarenteed<a>
+	    <a href="/app/signup" class="button">Get a Job, Guaranteed<a>
   	  </div> 
        </div>  
 	
