--- a/FAQ.html
+++ b/FAQ.html
@@ -166,6 +166,9 @@ The Easy Apply Bot is designed to run on almost any computer, including those "n
  	 </tr>
 	</tbody></table>
 
+	
+	Selenium runs is best in Firefox 57+
+	
 </div>
 	
 	
