--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	
 	<div class="flex-container">
 
-	    <a href="/app/signup" class="button">Get a Job, Guaranteed<a>
+		<a href="/app/signup" class="button">Get a Job, Guaranteed<sup>*</sup><a>
 
        </div>  
 	
