--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 </BODY>
 
 <FOOTER>
+	<sup><small>*</sup> Guarantee subject to <a href ="/terms">terms and conditions.</a></small>
 </FOOTER>
 
 </HTML>
