--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
 <div class = "card">
 	
-	<H3>Use our unique job application system to advance your career with the click of a button.</H3>
+	<H2>Searching for a job just got a whole lot easier.</H2>
 
 	<p align="justify">
 	Whether you're just starting to search a job or you've been searching already for months - applying to hundreds of jobs all day is the worst. Easy Apply Bot is here to change that. Instead of wading through a sea of job descriptions and then repeatedly filling out application forms, and then mashing a your way through a never-ending series of "next" and "confirm" buttons before finding out that they only are willing to pay 50% of your diresired pay, The Easy Apply Bot is designed to work with popular job forums such as LinkedIn, Indeed, Monster.com, and Glassdoor to automatically apply to jobs, connect with people, and so much more!</p><div class = "backgroundImage"  style = "max-width:25%;"> </div>
@@ -37,11 +37,11 @@
 	<p align="justify">The best part? You'll never be asked to upload a resume, and then type in all the relevant work experience ever again.  
 	</p>
 		
-	
+	<H2>Searching For A Job Shouldn't Be A Job.</H2>
 	
 	<div class="flex-container">
 
-		<a href="/app/signup" class="button">Get a Job, Guaranteed<sup><small>*</small></sup><a>
+		<a href="/app/signup" class="button">Automate Your Job Search<sup><small>*</small></sup><a>
 
        </div>  
 	
