--- a/index.html
+++ b/index.html
@@ -48,6 +48,45 @@
 
 
 		<H2>Features</H2>
+			
+			<table class="browserref">
+  	<tbody><tr>
+  	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
+   	  <th style="width:16%;" height="25" class="null" title="Mac"></th>
+  	  <th style="width:16%;" height="25" class="null" title="Windows PC"></th>
+	  <th style="width:16%;" height="25" class="null" title="Linux"></th>
+             
+  	</tr>
+  	<tr>
+	  <td style="text-align:left;">Supported</td>
+    	  <td style="text-align:center;">Yes</td>
+    	  <td style="text-align:center;">Yes</td>
+    	  <td style="text-align:center;">Yes</td>
+
+ 	 </tr>
+	</tbody></table>
+	<h2>Compatibility</h2>
+	<br>
+	<br>
+	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
+	<table class="browserref">
+  	<tbody><tr>
+  	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
+   	  <th style="width:16%;" height="25" class="FeatureCheckmark" title="Chrome"></th>
+  	  <th style="width:16%;" height="25" class="FeatureCheckmark" title="Internet Explorer / Edge"></th>
+	  <th style="width:16%;" height="25" class="FeatureCheckmark" title="Firefox"></th>
+    	  <th style="width:16%;" height="25" class="FeatureCheckmark" title="Safari"></th>
+          <th style="width:16%;" height="25" class="FeatureCheckmark" title="Opera"></th>                
+  	</tr>
+  	<tr>
+	  <td style="text-align:left;">Supported</td>
+    	  <td style="text-align:center;">Yes</td>
+    	  <td style="text-align:center;">Soon</td>
+    	  <td style="text-align:center;">Soon</td>
+  	  <td style="text-align:center;">Soon</td>
+  	  <td style="text-align:center;">Yes*</td>
+ 	 </tr>
+	</tbody></table>
 <div class="flex-container">
   <ul>
     <li>Apply to jobs on LinkedIn, Glassdoor, & more!</li>
