--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 		<a href="/app/signup" class="button">Automate Your Job Search<sup><small>*</small></sup><a>
 
        </div>  
-	
-
+			
+  <div class="flex-container">
 
 		<H2>Features</H2>
 			
@@ -87,6 +87,12 @@
   	  <td style="text-align:center;">Yes*</td>
  	 </tr>
 	</tbody></table>
+
+  <div class="flex-container">
+	  
+	  
+	  
+	  
 <div class="flex-container">
   <ul>
     <li>Apply to jobs on LinkedIn, Glassdoor, & more!</li>
