--- a/index.html
+++ b/index.html
@@ -44,30 +44,13 @@
 		<a href="/app/signup" class="button">Automate Your Job Search<sup><small>*</small></sup><a>
 
        </div>  
-			
+			<H2>Features</H2>
   <div class="flex-container">
 
-		<H2>Features</H2>
+	  <H1>Easy Apply Bot</H1><H1>Easy Apply Bot</H1><H1>Easy Apply Bot</H1>
+	  <br>
 			
-			<table class="browserref">
-  	<tbody><tr>
-  	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
-   	  <th style="width:16%;" height="25" class="null" title="Mac"></th>
-  	  <th style="width:16%;" height="25" class="null" title="Windows PC"></th>
-	  <th style="width:16%;" height="25" class="null" title="Linux"></th>
-             
-  	</tr>
-  	<tr>
-	  <td style="text-align:left;">Supported</td>
-    	  <td style="text-align:center;">Yes</td>
-    	  <td style="text-align:center;">Yes</td>
-    	  <td style="text-align:center;">Yes</td>
 
- 	 </tr>
-	</tbody></table>
-	<h2>Compatibility</h2>
-	<br>
-	<br>
 	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
 	<table class="browserref">
   	<tbody><tr>
