--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 			<H2>Features</H2>
   <div class="flex-container">
 
-	  <H1>Easy Apply Bot</H1><H1>Easy Apply Bot</H1><H1>Easy Apply Bot</H1>
+	  <H1>Easy Apply Bot</H1> <H1>Easy Apply Bot</H1> <H1>Easy Apply Bot</H1>
+</div class="flex-container">
+
+<div class="flex-container">  
 	  <br>
 			
 
