--- a/index.html
+++ b/index.html
@@ -47,31 +47,63 @@
 			<H2>Features</H2>
   <div class="flex-container">
 
-	  <H1>Easy Apply Bot</H1> <H1>Easy Apply Bot</H1> <H1>Easy Apply Bot</H1>
-</div class="flex-container">
-
-<div class="flex-container">  
+	  
 	  <br>
 			
 
 	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
 	<table class="browserref">
-  	<tbody><tr>
-  	  <th style="width:20%;font-size:16px;text-align:left;">Browser</th>
-   	  <th style="width:16%;" height="25" class="FeatureCheckmark" title="Chrome"></th>
-  	  <th style="width:16%;" height="25" class="FeatureCheckmark" title="Internet Explorer / Edge"></th>
-	  <th style="width:16%;" height="25" class="FeatureCheckmark" title="Firefox"></th>
-    	  <th style="width:16%;" height="25" class="FeatureCheckmark" title="Safari"></th>
-          <th style="width:16%;" height="25" class="FeatureCheckmark" title="Opera"></th>                
-  	</tr>
-  	<tr>
-	  <td style="text-align:left;">Supported</td>
-    	  <td style="text-align:center;">Yes</td>
-    	  <td style="text-align:center;">Soon</td>
-    	  <td style="text-align:center;">Soon</td>
-  	  <td style="text-align:center;">Soon</td>
-  	  <td style="text-align:center;">Yes*</td>
- 	 </tr>
+  	<tbody>
+	  <tr>
+  		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
+		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
+		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
+
+		
+	  </tr>
+		
+	  <tr>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+	  <tr>
+          
+	  <tr>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+	  <tr>
+
+		  
+	  <tr>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+	  <tr>
 	</tbody></table>
 
   <div class="flex-container">
