--- a/index.html
+++ b/index.html
@@ -66,43 +66,22 @@
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		
 	  </tr>
           
 	  <tr>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+
 	  </tr>
 
 		  
 	  <tr>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" title="No"></th>
+	
 	  </tr>
 	</tbody></table>
 
