--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 			
 
 	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
-	<table class="browserref">
-  	<tbody>
+	<table style="width:100%">
 	  <tr>
   		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
 		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
@@ -83,7 +82,7 @@
 		<td style="width:16%;" height="25" title="No"></th>
 	
 	  </tr>
-	</tbody></table>
+	</table>
 
   <div class="flex-container">
 	  
