--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	  <tr>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" title="No"></th>
+		<td style="width:16%;" height="25" title="No">No</th>
 	
 	  </tr>
 	</table>
