--- a/index.html
+++ b/index.html
@@ -62,24 +62,24 @@
 	  </tr>
 		
 	  <tr>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
 		
 	  </tr>
           
 	  <tr>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
 
 	  </tr>
 
 		  
 	  <tr>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></th>
-		<td style="width:16%;" height="25" title="No">No</th>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
+		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
+		<td style="width:16%;" height="25" title="No">No</td>
 	
 	  </tr>
 	</table>
