--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
 	<table style="width:100%">
-	  <tr>
+	  <tr>  <th style="width:16%;" height="25" title="Easy Apply Bot!"> " "</th>
   		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
 		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
 		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
@@ -61,14 +61,14 @@
 		
 	  </tr>
 		
-	  <tr>
+	  <tr>  <td style="width:16%;" height="25">LinkedIn, Glassdoor, & more!</td>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
 		
 	  </tr>
-          
-	  <tr>
+          Automatic resume upload & parsing!
+	  <tr>  <td style="width:16%;" height="25">Automatic resume upload & parsing!</td>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
 		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
