--- a/index.html
+++ b/index.html
@@ -49,40 +49,96 @@
 
 	  
 	  <br>
-			
-
-	<!-- Table is from: https://www.w3schools.com/tags/ref_html_browsersupport.asp -->
-	<table style="width:100%">
-	  <tr>  <th style="width:16%;" height="25" title="Easy Apply Bot!"> " "</th>
-  		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
-		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
-		<th style="width:16%;" height="25" title="Easy Apply Bot!">Easy Apply Bot</th>
-
-		
-	  </tr>
-		
-	  <tr>  <td style="width:16%;" height="25">LinkedIn, Glassdoor, & more!</td>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
-		
-	  </tr>
-          Automatic resume upload & parsing!
-	  <tr>  <td style="width:16%;" height="25">Automatic resume upload & parsing!</td>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
-
-	  </tr>
+<style type="text/css">
+.tg  {border-collapse:collapse;border-color:#9ABAD9;border-spacing:0;}
+.tg td{background-color:#EBF5FF;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#444;
+  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{background-color:#409cff;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#fff;
+  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-0lax"></th>
+    <th class="tg-0lax">Easy Apply Bot<br></th>
+    <th class="tg-0lax">Manual Applications</th>
+    <th class="tg-0lax">Paperwork<br></th>
+    <th class="tg-0lax">Other Methods</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0lax">LinkedIn, Glassdoor, &amp; More<br></td>
+    <td class="tg-0lax" class="FeatureCheckmark"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Resume Upload &amp; Parsing</td>
+    <td class="tg-0lax" class="FeatureCheckmark"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Connect based on job title &amp;/or location</td>
+    <td class="tg-0lax" class="FeatureCheckmark"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Works with Chrome, Firefox, Opera, &amp; more!</td>
+    <td class="tg-0lax" class="FeatureCheckmark"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Store a screenshot or CSVs of a user profiles!</td>
+    <td class="tg-0lax" class="FeatureCheckmark"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Send custom messages to new contacts</td>
+    <td class="tg-0lax" class="FeatureCheckmark"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Reporting &amp; statistic on number of applications compeleted!</td>
+    <td class="tg-0lax" class="FeatureCheckmark" ></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Increase your LinkedIn profile views!</td>
+    <td class="tg-0lax" class="FeatureCheckmark"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">Other stufffff!</td>
+    <td class="tg-0lax"class="FeatureCheckmark"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+    <td class="tg-0lax"></td>
+  </tr>
+</tbody>
+</table>
+	  
+	  
+	<!--	<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>   ->
 
 		  
-	  <tr>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
-		<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>
-		<td style="width:16%;" height="25" title="No">No</td>
-	
-	  </tr>
-	</table>
+		  
 
   <div class="flex-container">
 	  
