--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </table>
 	  
 	  
-	<!--	<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>   ->
+	<!--	<td style="width:16%;" height="25" class="FeatureCheckmark" title="Yes!"></td>   -->
 
 		  
 		  
