--- a/index.html
+++ b/index.html
@@ -55,81 +55,133 @@
   font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{background-color:#409cff;border-color:#9ABAD9;border-style:solid;border-width:1px;color:#fff;
   font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-0lax{text-align:left;vertical-align:top}
+.tg .tg-hvfu{border-color:#ebf5ff;text-align:left;vertical-align:top}
+.tg .tg-7w53{border-color:inherit;font-size:18px;font-weight:bold;text-align:left;vertical-align:bottom}
+.tg .tg-9j4q{border-color:#ebf5ff;color:#409cff;text-align:center;vertical-align:middle}
+.tg .tg-4n1d{border-color:#ebf5ff;color:#013300;text-align:center;vertical-align:top}
+.tg .tg-xic8{background-color:#ffffff;border-color:#ffffff;color:#ffffff;text-align:right;vertical-align:top}
+.tg .tg-89mj{border-color:inherit;font-size:18px;font-weight:bold;text-align:center;vertical-align:bottom}
+.tg .tg-c1kk{background-color:#ffffff;border-color:#ffffff;text-align:right;vertical-align:top}
+.tg .tg-zm0q{border-color:#ebf5ff;color:#409cff;text-align:center;vertical-align:top}
+.tg .tg-959o{border-color:#ebf5ff;color:#409cff;text-align:left;vertical-align:top}
+.tg .tg-tbh6{border-color:#ebf5ff;color:#409CFF;text-align:center;vertical-align:top}
+.tg .tg-3td0{border-color:#ebf5ff;text-align:center;vertical-align:top}
 </style>
-<table class="tg">
+<table class="tg" style="undefined;table-layout: fixed; width: 983px">
+<colgroup>
+<col style="width: 386px">
+<col style="width: 173px">
+<col style="width: 143px">
+<col style="width: 130px">
+<col style="width: 151px">
+</colgroup>
 <thead>
   <tr>
-    <th class="tg-0lax"></th>
-    <th class="tg-0lax">Easy Apply Bot<br></th>
-    <th class="tg-0lax">Manual Applications</th>
-    <th class="tg-0lax">Paperwork<br></th>
-    <th class="tg-0lax">Other Methods</th>
+    <th class="tg-xic8"></th>
+    <th class="tg-89mj"><br>Easy Apply Bot</th>
+    <th class="tg-7w53">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Manual&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+    <th class="tg-89mj">Paperwork</th>
+    <th class="tg-89mj">Other Methods</th>
   </tr>
 </thead>
 <tbody>
   <tr>
-    <td class="tg-0lax">LinkedIn, Glassdoor, &amp; More<br></td>
-    <td class="tg-0lax" class="FeatureCheckmark"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-c1kk">LinkedIn, Glassdoor, &amp; More<br></td>
+    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
   </tr>
   <tr>
-    <td class="tg-0lax">Resume Upload &amp; Parsing</td>
-    <td class="tg-0lax" class="FeatureCheckmark"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-c1kk">Resume Upload &amp; Parsing</td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-959o"></td>
+    <td class="tg-zm0q"></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
   </tr>
   <tr>
-    <td class="tg-0lax">Connect based on job title &amp;/or location</td>
-    <td class="tg-0lax" class="FeatureCheckmark"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-c1kk">Connect based on job title &amp;/or location</td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"></td>
+    <td class="tg-zm0q"></td>
   </tr>
   <tr>
-    <td class="tg-0lax">Works with Chrome, Firefox, Opera, &amp; more!</td>
-    <td class="tg-0lax" class="FeatureCheckmark"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-c1kk">Chrome, Firefox, Opera, &amp; more!</td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
   </tr>
   <tr>
-    <td class="tg-0lax">Store a screenshot or CSVs of a user profiles!</td>
-    <td class="tg-0lax" class="FeatureCheckmark"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-c1kk">Apply Based on Salary, Location &amp;  Title<br></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-tbh6"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"></td>
   </tr>
   <tr>
-    <td class="tg-0lax">Send custom messages to new contacts</td>
-    <td class="tg-0lax" class="FeatureCheckmark"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-c1kk">Send Custom Messages Contacts</td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-zm0q"></td>
+    <td class="tg-zm0q"></td>
   </tr>
   <tr>
-    <td class="tg-0lax">Reporting &amp; statistic on number of applications compeleted!</td>
-    <td class="tg-0lax" class="FeatureCheckmark" ></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-c1kk">Real-time Reports &amp; Statistic<br></td>
+    <td class="tg-zm0q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-959o"></td>
+    <td class="tg-zm0q"></td>
+    <td class="tg-zm0q"></td>
   </tr>
   <tr>
-    <td class="tg-0lax">Increase your LinkedIn profile views!</td>
-    <td class="tg-0lax" class="FeatureCheckmark"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-c1kk">Increase your LinkedIn profile views!</td>
+    <td class="tg-4n1d"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-hvfu"></td>
+    <td class="tg-3td0"></td>
+    <td class="tg-3td0"></td>
   </tr>
   <tr>
-    <td class="tg-0lax">Other stufffff!</td>
-    <td class="tg-0lax"class="FeatureCheckmark"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
-    <td class="tg-0lax"></td>
+    <td class="tg-c1kk"></td>
+    <td class="tg-4n1d"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-hvfu"></td>
+    <td class="tg-3td0"></td>
+    <td class="tg-3td0"></td>
+  </tr>
+  <tr>
+    <td class="tg-c1kk"></td>
+    <td class="tg-4n1d"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-hvfu"></td>
+    <td class="tg-3td0"></td>
+    <td class="tg-3td0"></td>
+  </tr>
+  <tr>
+    <td class="tg-c1kk"></td>
+    <td class="tg-4n1d"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-hvfu"></td>
+    <td class="tg-3td0"></td>
+    <td class="tg-3td0"></td>
+  </tr>
+  <tr>
+    <td class="tg-c1kk"></td>
+    <td class="tg-4n1d"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-hvfu"></td>
+    <td class="tg-3td0"></td>
+    <td class="tg-3td0"></td>
+  </tr>
+  <tr>
+    <td class="tg-c1kk"></td>
+    <td class="tg-4n1d"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-hvfu"></td>
+    <td class="tg-3td0"></td>
+    <td class="tg-3td0"></td>
+  </tr>
+  <tr>
+    <td class="tg-c1kk"></td>
+    <td class="tg-4n1d"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-hvfu"></td>
+    <td class="tg-3td0"></td>
+    <td class="tg-3td0"></td>
   </tr>
 </tbody>
 </table>
