--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	
 	<div class="flex-container">
 
-		<a href="/app/signup" class="button">Automate Your Job Search<sup><small>*</small></sup><a>
+		<a href="/app/signup" class="button">Automate Your Job Search<a>
 
        </div>  
 			<H2>Features</H2>
