--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 <tbody>
   <tr>
     <td class="tg-yc31">Easily Apply to 1000's of Jobs</td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"></td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
   </tr>
   <tr>
     <td class="tg-tf03">Apply by Salary, Title,  &amp; More</td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"></td>
     <td class="tg-9j4q"></td>
     <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
