--- a/index.html
+++ b/index.html
@@ -95,53 +95,53 @@
     <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"></td>
     <td class="tg-9j4q"></td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
   </tr>
   <tr>
     <td class="tg-tf03">Automatic Resume Parsing</td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"></td>
     <td class="tg-9j4q"></td>
   </tr>
   <tr>
     <td class="tg-tf03">Real-time Reports &amp; Statistic</td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"></td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
   </tr>
   <tr>
     <td class="tg-tf03">Customized Salary Reports</td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-2bpi"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-2bpi"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"></td>
   </tr>
   <tr>
     <td class="tg-yc31">Works on PC, Mac, &amp; Linux</td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"></td>
     <td class="tg-9j4q"></td>
   </tr>
   <tr>
     <td class="tg-yc31">Chrome, Firefox,  &amp; More</td>
-    <td class="tg-9j4q"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-9j4q"></td>
     <td class="tg-9j4q"></td>
     <td class="tg-9j4q"></td>
   </tr>
   <tr>
     <td class="tg-yc31">Increases profile views</td>
-    <td class="tg-y6ch"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-y6ch"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-kw3o"></td>
     <td class="tg-kw3o"></td>
     <td class="tg-kw3o"></td>
   </tr>
   <tr>
     <td class="tg-yc31">Tons of Extra Features!<br></td>
-    <td class="tg-y6ch"><img src="https://raw.githubusercontent.com/midnightsun183/LinkedInClickerPage/bdce71704c0a5b95a24a79809adc26c910b98641/images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-y6ch"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
     <td class="tg-kw3o"></td>
     <td class="tg-kw3o"></td>
     <td class="tg-kw3o"></td>
