--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
   <tr>
     <th class="tg-m2qi"><br></th>
     <th class="tg-89mj"><br>Easy Apply Bot</th>
-    <th class="tg-89mj">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Manual&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-    <th class="tg-89mj">Paperwork</th>
-    <th class="tg-89mj">Other Methods</th>
+    <th class="tg-89mj">Doing it Yourself</th>
+    <th class="tg-89mj">Recruiters</th>
+    <th class="tg-89mj">Staying Unemployed</th>
   </tr>
 </thead>
 <tbody>
