--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
   <tr>
     <td class="tg-tf03">Automatic Resume Parsing</td>
     <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="images/Checkmark_Icon.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="images/questionMark.svg" alt="Image" width="25" height="25"></td>
-    <td class="tg-9j4q"><img src="images/questionMark.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/x.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/x.svg" alt="Image" width="25" height="25"></td>
+    <td class="tg-9j4q"><img src="images/x.svg" alt="Image" width="25" height="25"></td>
   </tr>
   <tr>
     <td class="tg-tf03">Real-time Reports &amp; Statistic</td>
