--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 <thead>
   <tr>
     <th class="tg-m2qi"><br></th>
-    <th class="tg-89mj"><br>Easy Apply Bot</th>
+    <th class="tg-89mj"><br>Using the Easy Apply Bot</th>
     <th class="tg-89mj">Doing it Yourself</th>
-    <th class="tg-89mj">Recruiters</th>
+    <th class="tg-89mj">Hiring Recruiters</th>
     <th class="tg-89mj">Staying Unemployed</th>
   </tr>
 </thead>
